syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package = "github.com/PerfilievAlexandr/auth/internal/api/grpc/auth_v1;auth_v1";

service AuthV1 {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
  rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message LoginRequest {
  string username = 1 [(validate.rules).string = {min_len: 3, max_len: 50}];
  string password = 2 [(validate.rules).string = {min_len: 5, max_len: 50}];
}

message LoginResponse {
  string refresh_token = 1;
}

message GetRefreshTokenRequest {
  string refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}



